# libactionet

./: .gitignore  CMakeLists.txt  CMakeLists_ext.txt  README.md  TODO.md  actionet_r_wrapper.cpp  clean_build_test.sh  r_wrapper.cpp  r_wrapper_exp.cpp  r_wrapper_experimental.cpp  r_wrapper_ext.cpp  run_build_test_compile.sh  run_build_test_config.sh  rw_action.cpp  test_build_unix.sh  test_config_mac.sh  test_config_unix.sh
_EXCLUDE/: _old_reduction.cpp  _old_reduction.hpp  _old_svd.cpp  _old_svd.hpp  _old_svd_feng.cc  _old_svd_halko.cc  aa_ext.cc  action_ext.cc  action_ext.h  action_post_ext.cc  build_network_ext.cc  build_network_ext.h  celltype_annotation_ext.cc  celltype_annotation_ext.h  hdbscan.h  netdbscan.cc  netdbscan.h  network_diffusion_ext.cc  network_diffusion_ext.h  normalization_ext.cc  r_wrapper_ext.cpp  simplex_regression_fw.cc  simplex_regression_fw.h  specificity_ext.cc  specificity_ext.h  stats_misc_ext.h  visualization_ext.cc
_EXCLUDE/_old/: ACTIONet.h  base.h
_EXCLUDE/_old_extern/s_gd2/: randomkit.cc
_EXCLUDE/_old_source/: generate_layout.cpp  generate_layout.hpp  normalization.cpp  normalization.hpp  umap_structs.hpp
_EXCLUDE/experimental/: generate_layout_umappp.cpp  wr_umappp.cpp
_EXCLUDE/extra/: aa_ext.cc  aa_ext.h  action_ext.cc  action_ext.h  action_post_ext.cc  action_post_ext.h  autocorrelation_ext.cpp  autocorrelation_ext.hpp  build_network_ext.h  celltype_annotation_ext.cc  celltype_annotation_ext.h  hdbscan.cc  hdbscan.h  netdbscan.cc  network_diffusion_ext.h  normalization_ext.cc  normalization_ext.h  r_wrapper_ext.cpp  reduction_ext.cc  reduction_ext.h  simplex_regression_fw.cc  simplex_regression_fw.h  spa_ext.cc  spa_ext.h  stats_misc_ext.cc  svd2pca_ext.cc  svd2pca_ext.h  visualization_ext.cc  visualization_ext.h
cmake/: BuildTest.cmake  ConfigureApple.cmake  ConfigureBLAS.cmake  ConfigureR.cmake  FindSuiteSparse.cmake
include/: ACTIONet.h  action.hpp  actionet.hpp  base.h  config_actionet.hpp  config_arma.hpp  helpers_matrix.hpp  libactionet.hpp  libactionet_config.hpp  tools.hpp  visualization.hpp
include/_OLD/: base.h
include/_TO_INCLUDE/: base.h
include/_TO_INCLUDE/misc/: my_utils.h
include/action/: aa.hpp  action_decomp.hpp  action_main.hpp  action_post.hpp  orthogonalization.hpp  reduce_kernel.hpp  reduction.hpp  simplex_regression-priv.hpp  simplex_regression.hpp  spa.hpp  svd-priv.hpp  svd.hpp
include/actionet/: annotation.hpp  build_network.hpp  enrichment.hpp  label_propagation.hpp  network_diffusion.hpp  specificity.hpp
include/annotation/: marker_stats.hpp  specificity.hpp
include/decomposition/: orthogonalization.hpp  svd_feng.hpp  svd_halko.hpp  svd_irbla.hpp  svd_main.hpp
include/network/: build_network.hpp  hnsw_imp.hpp  hnsw_jensen_shannon.hpp  label_propagation.hpp  network_diffusion.hpp  network_measures.hpp
include/tools/: autocorrelation.hpp  enrichment.hpp  graph_measures.hpp  matrix_misc.hpp  matrix_transform.hpp  mwm.hpp  normalization.hpp  tl_math.hpp  tl_network.hpp  tl_normalization.hpp  xicor.hpp
include/utils/: utils_graph.hpp  utils_math.hpp  utils_matrix.hpp  utils_misc.hpp  utils_parallel.hpp  utils_xmap.hpp
include/utils_internal/: create_xmap.hpp  umap_structs.hpp  utils_active_set.hpp  utils_decomp.hpp  utils_graph.hpp  utils_hnsw.hpp  utils_matrix.hpp  utils_misc.hpp  utils_network.hpp  utils_parallel.hpp  utils_stats.hpp  utils_xmap.hpp
include/visualization/: OptimizerArgs.hpp  UmapFactory.hpp  UwotArgs.hpp  color_map.hpp  create_xmap.hpp  find_ab.hpp  generate_layout.hpp  generate_layout_new.hpp  generate_layout_umappp.hpp  hnsw_imp.hpp  initialize_umappp.hpp  layout_network.hpp  old_find_ab.hpp  optimize_layout.hpp  umap_structs.hpp  umap_structs_new.hpp  uwot_actionet.hpp
src/: helpers_matrix.cpp  utils_math.cpp  utils_math.hpp  utils_matrix.cpp  utils_matrix.hpp  utils_parallel.hpp
src/_DONT_COMPILE/: aa_ext.h  action_ext.cc  action_ext.h  netdbscan.cc  netdbscan.h  network_diffusion_ext.h  normalization_ext.h  reduction_ext.cc  spa_ext.cc  stats_misc_ext.cc  visualization_ext.h
src/_TODO/: autocorrelation.cc
src/_TODO_network_tools/: celltype_annotation.cc  network_diffusion.cc
src/action/: aa.cpp  aa.hpp  action.cpp  action.hpp  action_decomp.cpp  action_main.cpp  action_post.cpp  orthogonalization.cpp  orthogonalization.hpp  reduce_kernel.cpp  reduction.cpp  reduction.hpp  simplex_regression.cpp  spa.cpp  spa.hpp  svd.cpp  svd.hpp  test_action
src/actionet/: annotation.cpp  build_network.cpp  enrichment.cpp  label_propagation.cpp  label_propagation.hpp  network_diffusion.cpp  specificity.cpp
src/annotation/: marker_stats.cpp  specificity.cpp
src/decomposition/: ACTION.cc  ACTION_ext.cc  orthogonalization.cpp  svd_feng.cpp  svd_halko.cpp  svd_irbla.cpp  svd_main.cpp  unification.cc
src/ext/: colorspace.cpp
src/misc/: hdbscan.cc  my_utils.cc
src/network/: build_network.cpp  label_propagation.cpp  network_diffusion.cpp  network_measures.cpp
src/network_visualization/: layout.cc
src/tools/: autocorrelation.cpp  enrichment.cpp  graph_measures.cpp  matrix_aggregate.cpp  matrix_misc.cpp  matrix_transform.cpp  mwm.cpp  normalization.cpp  tl_math.cpp  tl_network.cpp  tl_normalization.cpp  xicor.cpp
src/utils/: utils_graph.cpp  utils_math.cpp  utils_matrix.cpp  utils_misc.cpp  utils_xmap.cpp
src/utils_internal/: utils_active_set.cpp  utils_decomp.cpp  utils_graph.cpp  utils_hnsw.cc  utils_hnsw.cpp  utils_matrix.cpp  utils_misc.cpp  utils_network.cpp  utils_stats.cpp  utils_xmap.cc  utils_xmap.cpp
src/visualization/: UmapFactory.hpp  color_map.cpp  create_xmap.cpp  find_ab.hpp  generate_layout.cpp  generate_layout.hpp  generate_layout_new.cpp  generate_layout_umappp.cpp  layout_network.cpp  optimize_layout.cpp  utils_xmap.hpp  uwot_actionet.cpp  visualization.hpp
test/: configure_R  test_build_mac.sh  test_build_unix.sh  test_config_mac.sh  test_config_unix.sh
wrappers_r/: actionet_r_config.h  wr_action.cpp  wr_annotation.cpp  wr_decomposition.cpp  wr_experimental.cpp  wr_network.cpp  wr_tools.cpp  wr_visualization.cpp
(+22 files in other folders)
